--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
                         <div class="row">
                             <div class="col-offset-2 col-8 col-offset-2 graph-chart">
                                 <h4 class="graph-title">Earning chart</h4>
-                                <img class="graph" src="images/icons/graph.svg">
+                                <div class="scroll-wrapper">
+                                    <img class="graph" src="images/icons/graph.svg">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -129,106 +131,113 @@
                 </div>
                 <div class="row">
                     <div class="col-offset-2 col-8 col-offset-2">
-                        <div class="table">
-                            <!-- Row 1 -->
-                            <div class="table-row">
-                                <div class="table-item">Home page</div>
-                                <div class="table-item"><a href="http://www.homepage.com">http://www.homepage.com</a>
+                        <div class="scroll-wrapper">
+                            <div class="table">
+                                <!-- Row 1 -->
+                                <div class="table-row">
+                                    <div class="table-item">Home page</div>
+                                    <div class="table-item"><a
+                                            href="http://www.homepage.com">http://www.homepage.com</a>
+                                    </div>
+                                    <div class="table-item">
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
+                                    </div>
                                 </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
+                                <!-- Row 2 -->
+                                <div class="table-row">
+                                    <div class="table-item">Currently offer</div>
+                                    <div class="table-item"><a
+                                            href="http://www.currently.com">http://www.currently.com</a>
+                                    </div>
+                                    <div class="table-item">
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
+                                    </div>
                                 </div>
-                            </div>
-                            <!-- Row 2 -->
-                            <div class="table-row">
-                                <div class="table-item">Currently offer</div>
-                                <div class="table-item"><a href="http://www.currently.com">http://www.currently.com</a>
+                                <!-- Row 3 -->
+                                <div class="table-row">
+                                    <div class="table-item">Blurpix</div>
+                                    <div class="table-item"><a href="http://www.blurpix.com">http://www.blurpix.com</a>
+                                    </div>
+                                    <div class="table-item">
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
+                                    </div>
                                 </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
+                                <!-- Row 4 -->
+                                <div class="table-row">
+                                    <div class="table-item">Yoursite</div>
+                                    <div class="table-item"><a
+                                            href="http://www.yoursite.com">http://www.yoursite.com</a>
+                                    </div>
+                                    <div class="table-item">
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
+                                    </div>
                                 </div>
-                            </div>
-                            <!-- Row 3 -->
-                            <div class="table-row">
-                                <div class="table-item">Blurpix</div>
-                                <div class="table-item"><a href="http://www.blurpix.com">http://www.blurpix.com</a>
+                                <!-- Row 5 -->
+                                <div class="table-row">
+                                    <div class="table-item">Google</div>
+                                    <div class="table-item"><a href="http://www.google.com">http://www.google.com</a>
+                                    </div>
+                                    <div class="table-item">
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
+                                    </div>
                                 </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
+                                <!-- Row 6 -->
+                                <div class="table-row">
+                                    <div class="table-item">Facebook</div>
+                                    <div class="table-item"><a
+                                            href="http://www.facebook.com">http://www.facebook.com</a>
+                                    </div>
+                                    <div class="table-item">
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
+                                    </div>
                                 </div>
-                            </div>
-                            <!-- Row 4 -->
-                            <div class="table-row">
-                                <div class="table-item">Yoursite</div>
-                                <div class="table-item"><a href="http://www.yoursite.com">http://www.yoursite.com</a>
+                                <!-- Row 7 -->
+                                <div class="table-row">
+                                    <div class="table-item">Dashboard</div>
+                                    <div class="table-item"><a
+                                            href="http://www.dashboard.com">http://www.dashboard.com</a>
+                                    </div>
+                                    <div class="table-item">
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
+                                    </div>
                                 </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
+                                <!-- Row 8 -->
+                                <div class="table-row">
+                                    <div class="table-item">Blurax</div>
+                                    <div class="table-item"><a href="http://www.blurax.com">http://www.blurax.com</a>
+                                    </div>
+                                    <div class="table-item">
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
+                                    </div>
                                 </div>
-                            </div>
-                            <!-- Row 5 -->
-                            <div class="table-row">
-                                <div class="table-item">Google</div>
-                                <div class="table-item"><a href="http://www.google.com">http://www.google.com</a>
+                                <!-- Row 9 -->
+                                <div class="table-row">
+                                    <div class="table-item">Piece of Wine</div>
+                                    <div class="table-item"><a
+                                            href="http://www.pieceofwine.com">http://www.pieceofwine.com</a>
+                                    </div>
+                                    <div class="table-item">
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
+                                    </div>
                                 </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
-                                </div>
-                            </div>
-                            <!-- Row 6 -->
-                            <div class="table-row">
-                                <div class="table-item">Facebook</div>
-                                <div class="table-item"><a href="http://www.facebook.com">http://www.facebook.com</a>
-                                </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
-                                </div>
-                            </div>
-                            <!-- Row 7 -->
-                            <div class="table-row">
-                                <div class="table-item">Dashboard</div>
-                                <div class="table-item"><a href="http://www.dashboard.com">http://www.dashboard.com</a>
-                                </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
-                                </div>
-                            </div>
-                            <!-- Row 8 -->
-                            <div class="table-row">
-                                <div class="table-item">Blurax</div>
-                                <div class="table-item"><a href="http://www.blurax.com">http://www.blurax.com</a>
-                                </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
-                                </div>
-                            </div>
-                            <!-- Row 9 -->
-                            <div class="table-row">
-                                <div class="table-item">Piece of Wine</div>
-                                <div class="table-item"><a
-                                        href="http://www.pieceofwine.com">http://www.pieceofwine.com</a>
-                                </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
-                                </div>
-                            </div>
-                            <!-- Row 10 -->
-                            <div class="table-row">
-                                <div class="table-item">Twitter</div>
-                                <div class="table-item"><a href="http://www.twitter.com">http://www.twitter.com</a>
-                                </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
+                                <!-- Row 10 -->
+                                <div class="table-row">
+                                    <div class="table-item">Twitter</div>
+                                    <div class="table-item"><a href="http://www.twitter.com">http://www.twitter.com</a>
+                                    </div>
+                                    <div class="table-item">
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
+                                        <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -241,6 +250,7 @@
                 </div>
         </section>
     </div>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
