Add responive grid

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
                 <div class="row">
                     <ul class="list-group list-group-horizontal">
                         <li class="list-group-item">
-                            <a href="#"><img class="icon" src="images/icons/wallet.svg">$1,500.00<img class="icon"
-                                    src="images/icons/arrow-down-small.svg"></a>
+                            <a href="#"><img class="icon" src="images/icons/wallet.svg">$1,500.00
+                                <img class="icon" src="images/icons/arrow-down-small.svg">
+                            </a>
                         </li>
                         <li class="list-group-item">
                             <a href="#"><img class="icon" src="images/icons/notification.svg"></a>
@@ -105,12 +106,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-offset-2 col-8 col-offset-2 graph-chart">
-                                <h4 class="graph-title">Earning chart</h4>
-                                <div class="scroll-wrapper">
-                                    <img class="graph" src="images/icons/graph.svg">
-                                </div>
+                        <div class="col-offset-2 col-8 col-offset-2 graph-chart">
+                            <h4 class="graph-title">Earning chart</h4>
+                            <div class="scroll-wrapper">
+                                <img class="graph" src="images/icons/graph.svg">
                             </div>
                         </div>
                     </div>
