--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <body id="page">
     <!-- Navigation -->
     <nav class="col-2 navbar container">
-        <h3>Just do it</h3>
-        <a class="navbar-menu" href="#"><i class="fas fa-bars"></i></a>
+        <div class="container">
+            <h3>Just do it</h3>
+            <a class="navbar-menu" href="#"><i class="fas fa-bars"></i></a>
+        </div>
         <ul class="list-group">
             <li class="list-group-item list-hover">
                 <a href="#"><img class="icon" src="images/icons/general.svg">General</a>
@@ -81,7 +83,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-offset-4 col-4 col-offset-4">
+                    <div class="col-offset-4 col-4 col-offset-4 col-lg-6">
                         <div class="calendar">
                             <p>16.05.2016</p>
                             <p>16.05.2016 <img class="icon" src="images/icons/calendar.svg"></p>
