Change grid and responive menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body id="page">
     <!-- Navigation -->
-    <nav class="col-2 navbar container">
+    <nav class="col-lg-2 col-md-2 col-sm-2 navbar container">
         <div class="container">
             <h3>Just do it</h3>
             <a class="navbar-menu" href="#"><i class="fas fa-bars"></i></a>
@@ -50,8 +50,8 @@
         </div>
     </nav>
     <!-- Topbar -->
-    <header class="col-12 topbar">
-        <div class="col-offset-8 col-4">
+    <header class="col-md-12 topbar">
+        <div class="col-offset-md-8 col-md-4">
             <div class="container-fluid">
                 <div class="row">
                     <ul class="list-group list-group-horizontal">
@@ -74,16 +74,16 @@
             </div>
         </div>
     </header>
-    <div class="col-offset-2 col-10 main-content">
+    <div class="col-offset-md-2 col-md-10 col-sm-12 main-content">
         <section class="general-statistic">
             <div class="row">
-                <div class="col-12 section-header">
+                <div class="col-md-12 section-header">
                     <h3 class="section-title">General statistic</h3>
                 </div>
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-offset-4 col-4 col-offset-4 col-lg-6">
+                    <div class="col-offset-md-4 col-md-4 col-offset-md-4 col-lg-6">
                         <div class="calendar">
                             <p>16.05.2016</p>
                             <p>16.05.2016 <img class="icon" src="images/icons/calendar.svg"></p>
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-offset-2 col-8 col-offset-2">
+                        <div class="col-offset-md-2 col-md-8 col-offset-md-2">
                             <div class="table">
                                 <div class="table-row">
                                     <div class="table-item">Visit Signups</div>
@@ -108,7 +108,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-offset-2 col-8 col-offset-2 graph-chart">
+                        <div class="col-offset-md-2 col-md-8 col-offset-md-2 graph-chart">
                             <h4 class="graph-title">Earning chart</h4>
                             <div class="scroll-wrapper">
                                 <img class="graph" src="images/icons/graph.svg">
@@ -120,18 +120,18 @@
         </section>
         <section class="links">
             <div class="row">
-                <div class="col-12 section-header">
+                <div class="col-md-12 section-header">
                     <h3 class="section-title">Links</h3>
                 </div>
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-offset-5 col-2 col-offset-5">
+                    <div class="col-offset-md-5 col-md-2 col-offset-md-5 col-offset-sm-5 col-sm-2 col-offset-sm-5">
                         <button class="btn btn-primary btn-lg">+ add new</button>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-offset-2 col-8 col-offset-2 ">
+                    <div class="col-offset-md-2 col-md-8 col-offset-md-2 ">
                         <div class="table">
                             <!-- Row 1 -->
                             <div class="table-row">
@@ -235,11 +235,10 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-offset-5 col-2 col-offset-5">
+                    <div class="col-offset-md-5 col-md-2 col-offset-md-5 col-offset-sm-5 col-sm-2 col-offset-sm-5">
                         <button class="btn btn-primary btn-lg">+ add new</button>
                     </div>
                 </div>
