Chance grid for buttons and calendar in index.html

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         </div>
     </nav>
     <!-- Topbar -->
-    <header class="col-md-12 topbar">
-        <div class="col-offset-md-8 col-md-4">
-            <div class="container-fluid">
+    <header class="col-md-12 col-sm-12 topbar">
+        <div class="col-offset-md-8 col-md-4 col-sm-10 ">
+            <div class="container">
                 <div class="row">
                     <ul class="list-group list-group-horizontal">
                         <li class="list-group-item">
@@ -83,7 +83,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-offset-md-4 col-md-4 col-offset-md-4 col-lg-6">
+                    <div class="col-md-12 col-sm-12">
                         <div class="calendar">
                             <p>16.05.2016</p>
                             <p>16.05.2016 <img class="icon" src="images/icons/calendar.svg"></p>
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-offset-md-2 col-md-8 col-offset-md-2">
+                        <div class="col-offset-md-2 col-md-8 col-offset-md-2 col-sm-12">
                             <div class="table">
                                 <div class="table-row">
                                     <div class="table-item">Visit Signups</div>
@@ -111,7 +111,7 @@
                         <div class="col-offset-md-2 col-md-8 col-offset-md-2 graph-chart">
                             <h4 class="graph-title">Earning chart</h4>
                             <div class="scroll-wrapper">
-                                <img class="graph" src="images/icons/graph.svg">
+                                <img class="graph table" src="images/icons/graph.svg">
                             </div>
                         </div>
                     </div>
@@ -126,12 +126,12 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-offset-md-5 col-md-2 col-offset-md-5 col-offset-sm-5 col-sm-2 col-offset-sm-5">
+                    <div class="col-md-12 col-sm-12 container-fluid">
                         <button class="btn btn-primary btn-lg">+ add new</button>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-offset-md-2 col-md-8 col-offset-md-2 ">
+                    <div class="col-offset-md-2 col-md-8 col-offset-md-2">
                         <div class="table">
                             <!-- Row 1 -->
                             <div class="table-row">
@@ -238,7 +238,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-offset-md-5 col-md-2 col-offset-md-5 col-offset-sm-5 col-sm-2 col-offset-sm-5">
+                    <div class="col-md-12 col-sm-12 container-fluid">
                         <button class="btn btn-primary btn-lg">+ add new</button>
                     </div>
                 </div>
