--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </nav>
     <!-- Topbar -->
     <header class="col-md-12 col-sm-12 topbar">
-        <div class="col-offset-md-8 col-md-4 col-sm-10 ">
+        <div class="col-offset-md-4 col-md-8 col-offset-lg-4 col-lg-8">
             <div class="container">
                 <div class="row">
                     <ul class="list-group list-group-horizontal">
