Add section personal_data and form_field

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="#"><img class="icon" src="images/icons/banners.svg">Banners</a>
             </li>
             <li class="list-group-item list-hover">
-                <a href="#"><img class="icon" src="images/icons/personaldata.svg">Personal data</a>
+                <a href="personaldata.html"><img class="icon" src="images/icons/personaldata.svg">Personal data</a>
             </li>
             <li class="list-group-item list-hover">
                 <a href="#"><img class="icon" src="images/icons/payout.svg">Payout</a>
