Add postback and change input styles

--- a/banners.html
+++ b/banners.html
@@ -78,7 +78,7 @@
         <section class="links">
             <div class="row">
                 <div class="col-md-12 section-header">
-                    <h3 class="section-title">Links</h3>
+                    <h3 class="section-title">Banners</h3>
                 </div>
             </div>
             <div class="container">
@@ -92,8 +92,9 @@
                         <div class="table">
                             <!-- Row 1 -->
                             <div class="table-row">
-                                <div class="table-item">Home page</div>
-                                <div class="table-item"><a href="http://www.homepage.com">http://www.homepage.com</a>
+                                <div class="table-item">Banner main</div>
+                                <div class="table-item"><a
+                                        href="http://www.website.com/bannermain.gif">http://www.website.com/bannermain.gif</a>
                                 </div>
                                 <div class="table-item">
                                     <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
@@ -102,8 +103,9 @@
                             </div>
                             <!-- Row 2 -->
                             <div class="table-row">
-                                <div class="table-item">Currently offer</div>
-                                <div class="table-item"><a href="http://www.currently.com">http://www.currently.com</a>
+                                <div class="table-item">Sign up banner</div>
+                                <div class="table-item"><a
+                                        href="http://www.website.com/signup.gif">http://www.website.com/signup.gif</a>
                                 </div>
                                 <div class="table-item">
                                     <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
@@ -112,8 +114,9 @@
                             </div>
                             <!-- Row 3 -->
                             <div class="table-row">
-                                <div class="table-item">Blurpix</div>
-                                <div class="table-item"><a href="http://www.blurpix.com">http://www.blurpix.com</a>
+                                <div class="table-item">Banner left side</div>
+                                <div class="table-item"><a
+                                        href="http://www.website.com/leftside.gif">http://www.website.com/leftside.gif</a>
                                 </div>
                                 <div class="table-item">
                                     <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
@@ -122,8 +125,9 @@
                             </div>
                             <!-- Row 4 -->
                             <div class="table-row">
-                                <div class="table-item">Yoursite</div>
-                                <div class="table-item"><a href="http://www.yoursite.com">http://www.yoursite.com</a>
+                                <div class="table-item">Vertical banner</div>
+                                <div class="table-item"><a
+                                        href="http://www.website.com/vert.gif">http://www.website.com/vert.gif</a>
                                 </div>
                                 <div class="table-item">
                                     <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
@@ -132,8 +136,9 @@
                             </div>
                             <!-- Row 5 -->
                             <div class="table-row">
-                                <div class="table-item">Google</div>
-                                <div class="table-item"><a href="http://www.google.com">http://www.google.com</a>
+                                <div class="table-item">Front banner</div>
+                                <div class="table-item"><a
+                                        href="http://www.website.com/front.gif">http://www.website.com/front.gif</a>
                                 </div>
                                 <div class="table-item">
                                     <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
@@ -142,49 +147,9 @@
                             </div>
                             <!-- Row 6 -->
                             <div class="table-row">
-                                <div class="table-item">Facebook</div>
-                                <div class="table-item"><a href="http://www.facebook.com">http://www.facebook.com</a>
-                                </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
-                                </div>
-                            </div>
-                            <!-- Row 7 -->
-                            <div class="table-row">
-                                <div class="table-item">Dashboard</div>
-                                <div class="table-item"><a href="http://www.dashboard.com">http://www.dashboard.com</a>
-                                </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
-                                </div>
-                            </div>
-                            <!-- Row 8 -->
-                            <div class="table-row">
-                                <div class="table-item">Blurax</div>
-                                <div class="table-item"><a href="http://www.blurax.com">http://www.blurax.com</a>
-                                </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
-                                </div>
-                            </div>
-                            <!-- Row 9 -->
-                            <div class="table-row">
-                                <div class="table-item">Piece of Wine</div>
+                                <div class="table-item">Horizontal banner</div>
                                 <div class="table-item"><a
-                                        href="http://www.pieceofwine.com">http://www.pieceofwine.com</a>
-                                </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
-                                </div>
-                            </div>
-                            <!-- Row 10 -->
-                            <div class="table-row">
-                                <div class="table-item">Twitter</div>
-                                <div class="table-item"><a href="http://www.twitter.com">http://www.twitter.com</a>
+                                        href="http://www.website.com/horizontal.gif">http://www.website.com/horizontal.gif</a>
                                 </div>
                                 <div class="table-item">
                                     <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
