--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="links.html"><img class="icon" src="images/icons/links.svg">Links</a>
             </li>
             <li class="list-group-item list-hover">
-                <a href="#"><img class="icon" src="images/icons/banners.svg">Banners</a>
+                <a href="banners.html"><img class="icon" src="images/icons/banners.svg">Banners</a>
             </li>
             <li class="list-group-item list-hover">
                 <a href="personaldata.html"><img class="icon" src="images/icons/personaldata.svg">Personal data</a>
@@ -38,7 +38,7 @@
                 <a href="#"><img class="icon" src="images/icons/payout.svg">Payout</a>
             </li>
             <li class="list-group-item list-hover">
-                <a href="#"><img class="icon" src="images/icons/postback.svg">Postback</a>
+                <a href="postback.html"><img class="icon" src="images/icons/postback.svg">Postback</a>
             </li>
         </ul>
         <div class="team-manager">
