--- a/payout.html
+++ b/payout.html
@@ -75,93 +75,85 @@
         </div>
     </header>
     <div class="col-offset-md-2 col-md-10 col-sm-12 main-content">
-        <section class="links">
+        <section class="general-statistic">
             <div class="row">
                 <div class="col-md-12 section-header">
-                    <h3 class="section-title">Banners</h3>
+                    <h3 class="section-title">Payout history</h3>
                 </div>
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 col-sm-12 container-fluid">
-                        <button class="btn btn-primary btn-lg">+ add new</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-offset-md-2 col-md-8 col-offset-md-2">
-                        <div class="table">
-                            <!-- Row 1 -->
-                            <div class="table-row">
-                                <div class="table-item">Banner main</div>
-                                <div class="table-item"><a
-                                        href="http://www.website.com/bannermain.gif">http://www.website.com/bannermain.gif</a>
-                                </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
-                                </div>
-                            </div>
-                            <!-- Row 2 -->
-                            <div class="table-row">
-                                <div class="table-item">Sign up banner</div>
-                                <div class="table-item"><a
-                                        href="http://www.website.com/signup.gif">http://www.website.com/signup.gif</a>
-                                </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
-                                </div>
-                            </div>
-                            <!-- Row 3 -->
-                            <div class="table-row">
-                                <div class="table-item">Banner left side</div>
-                                <div class="table-item"><a
-                                        href="http://www.website.com/leftside.gif">http://www.website.com/leftside.gif</a>
-                                </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
-                                </div>
-                            </div>
-                            <!-- Row 4 -->
-                            <div class="table-row">
-                                <div class="table-item">Vertical banner</div>
-                                <div class="table-item"><a
-                                        href="http://www.website.com/vert.gif">http://www.website.com/vert.gif</a>
-                                </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
-                                </div>
-                            </div>
-                            <!-- Row 5 -->
-                            <div class="table-row">
-                                <div class="table-item">Front banner</div>
-                                <div class="table-item"><a
-                                        href="http://www.website.com/front.gif">http://www.website.com/front.gif</a>
-                                </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
-                                </div>
-                            </div>
-                            <!-- Row 6 -->
-                            <div class="table-row">
-                                <div class="table-item">Horizontal banner</div>
-                                <div class="table-item"><a
-                                        href="http://www.website.com/horizontal.gif">http://www.website.com/horizontal.gif</a>
-                                </div>
-                                <div class="table-item">
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/links.svg"></a>
-                                    <a href="#"><img class="icon icon-table-hover" src="images/icons/trash.svg"></a>
-                                </div>
-                            </div>
+                    <div class="col-md-12 col-sm-12">
+                        <div class="calendar">
+                            <p>16.05.2016</p>
+                            <p>16.05.2016 <img class="icon" src="images/icons/calendar.svg"></p>
+                            <button class="btn btn-primary btn-sm"><img class="icon" src="images/icons/refresh.svg">
+                            </button>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="container">
                 <div class="row">
-                    <div class="col-md-12 col-sm-12 container-fluid">
-                        <button class="btn btn-primary btn-lg">+ add new</button>
+                    <div class="col-md-12">
+                        <div class="table">
+                            <!-- Row 1 -->
+                            <div class="table-row">
+                                <div class="table-item">17/08/02 (12:58)</div>
+                                <div class="table-item">34,425.00</div>
+                                <div class="table-item">cpl (200)</div>
+                                <div class="table-item">bank</div>
+                            </div>
+                            <!-- Row 2 -->
+                            <div class="table-row">
+                                <div class="table-item">15/08/02 (12:58)</div>
+                                <div class="table-item">29,436.00</div>
+                                <div class="table-item">cpl (200)</div>
+                                <div class="table-item">bank</div>
+                            </div>
+                            <!-- Row 3 -->
+                            <div class="table-row">
+                                <div class="table-item">17/08/02 (12:58)</div>
+                                <div class="table-item">34,425.00</div>
+                                <div class="table-item">cpl (200)</div>
+                                <div class="table-item">bank</div>
+                            </div>
+                            <!-- Row 4 -->
+                            <div class="table-row">
+                                <div class="table-item">15/08/02 (12:58)</div>
+                                <div class="table-item">29,436.00</div>
+                                <div class="table-item">cpl (200)</div>
+                                <div class="table-item">bank</div>
+                            </div>
+                            <!-- Row 5 -->
+                            <div class="table-row">
+                                <div class="table-item">17/08/02 (12:58)</div>
+                                <div class="table-item">34,425.00</div>
+                                <div class="table-item">cpl (200)</div>
+                                <div class="table-item">bank</div>
+                            </div>
+                            <!-- Row 6 -->
+                            <div class="table-row">
+                                <div class="table-item">15/08/02 (12:58)</div>
+                                <div class="table-item">29,436.00</div>
+                                <div class="table-item">cpl (200)</div>
+                                <div class="table-item">bank</div>
+                            </div>
+                            <!-- Row 7 -->
+                            <div class="table-row">
+                                <div class="table-item">17/08/02 (12:58)</div>
+                                <div class="table-item">34,425.00</div>
+                                <div class="table-item">cpl (200)</div>
+                                <div class="table-item">bank</div>
+                            </div>
+                            <!-- Row 8 -->
+                            <div class="table-row">
+                                <div class="table-item">15/08/02 (12:58)</div>
+                                <div class="table-item">29,436.00</div>
+                                <div class="table-item">cpl (200)</div>
+                                <div class="table-item">bank</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
         </section>
