--- a/personaldata.html
+++ b/personaldata.html
@@ -35,7 +35,7 @@
                 <a href="personaldata.html"><img class="icon" src="images/icons/personaldata.svg">Personal data</a>
             </li>
             <li class="list-group-item list-hover">
-                <a href="#"><img class="icon" src="images/icons/payout.svg">Payout</a>
+                <a href="payout.html"><img class="icon" src="images/icons/payout.svg">Payout</a>
             </li>
             <li class="list-group-item list-hover">
                 <a href="postback.html"><img class="icon" src="images/icons/postback.svg">Postback</a>
